Fixed Column Spacing in Table. Fixed broken link on the nav bar.

--- a/src/app/components/adminview/adminview.component.css
+++ b/src/app/components/adminview/adminview.component.css
@@ -15,7 +15,15 @@
 	color: white;
 	font-weight: bold;
 }
-
+.customSmallClass{
+   flex: 0 0 75px;
+}
+.customLongClass{
+   flex: 0 0 130px;
+}
+.customXLongClass{
+   flex: 0 0 200px;
+}
 .md-icon{
   font-family: 'Material Icons' !important;
 }
